# python-portfolio

./: .gitignore  LICENSE  README.md
autogen_lab/: .env.sample  .gitignore  README.md  requirements.txt
autogen_lab/projects/: README.md  autogen_frontend_streamlit.py
autogen_lab/projects/meal_prep_rag_pipeline/: README.md  pyproject.toml  requirements.txt
projects/meal_prep_agent/: .gitignore  pyproject.toml  requirements.txt
projects/meal_prep_agent/app/: streamlit_app.py
projects/meal_prep_agent/src/meal_prep_agent/: config.py  embed.py  ingest.py  query.py  retriever.py
projects/meal_prep_agent/src/meal_prep_agent/agents/: critic_agent.py  orchestrator.py  researcher_agent.py  tools.py  writer_agent.py
projects/meal_prep_agent/src/meal_prep_agent/scripts/: test_critic.py  test_researcher.py  test_writer.py
python-snippets/advanced_python/: README.md
python-snippets/concurrency/: README.md
python-snippets/data_structures/: README.md  lists.py
python-snippets/encoding/: README.md
python-snippets/io_operations/: README.md
python-snippets/ml_setup/: README.md
python-snippets/orchestration.py/: README.md
python-snippets/security/: README.md
python-snippets/ui_desktop/: README.md
python-snippets/utils/: README.md
python-snippets/web_apis/: README.md
tutorials/: .gitignore
tutorials/autogen/: README.md  requirements.txt
tutorials/basics/: 1_AgentChat_First_Agent.ipynb  2_Agent in Autogen.ipynb  4_Multi-Model Capabilities with Autogen Agent.ipynb  7_human_in_the_loop.py  7_human_in_the_loop_level2.py  8_Custom_Tool_Function.py
(+28 files in other folders)
