[project]
name = "meal_prep_agent"
version = "0.1.0"
dependencies = [
    "autogen-agentchat",
    "autogen-core",
    "autogen-ext",
    "asyncio",
    "dotenv",
    "openai",
    "autogen-ext[openai]",
    "streamlit",
    "chromadb"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]